# Statics

./: Cargo.toml  index.html
assets/: sw.js
src/: command.rs  fix.sh  lib.rs  main.rs  physics.rs  structs.rs  structs1
src/command_bar/: command.rs  mod.rs
src/dimension/: dimension.rs  mod.rs
src/keyboard_input/: keyboard_input.rs  mod.rs
src/physics/: mod.rs  physics.rs
src/physics_dir/: physics.rs
src/structs_dir/: structs.rs
test_trusses/: bontruss2.json  truss1.json  truss2.json  truss4.json
