[package]
name = "truss"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1" }
bevy_cursor = {version= "0.6.0", features=["2d"]}
faer = {version= "0.23.2", default-features= false, features=["serde", "std", "perf-warn",]}
rayon = "1.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
