[package]
name = "truss"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
getrandom    = { version = "0.3", features = ["wasm_js"] }
log = "0.4.29"
nalgebra = "0.34.1"
nalgebra-sparse = "0.11.0"
nalgebra-sparse-linalg = "0.1.10"
serde = "1.0.228"
serde_json = "1.0.145"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

